--- a/src/main/asciidoc/reference/mongodb.adoc
+++ b/src/main/asciidoc/reference/mongodb.adoc
@@ -4,7 +4,7 @@
 The MongoDB support contains a wide range of features:
 
 * Spring configuration support with Java-based `@Configuration` classes or an XML namespace for a Mongo driver instance and replica sets.
-* `MongoTemplate` helper class that increases productivity when performing common Mongo operations. Includes integrated object mapping between documents and POJOs.
+* `MongoTemplate` helper class that increases productivity when performing common Mongo operations.Includes integrated object mapping between documents and POJOs.
 * Exception translation into Spring's portable Data Access Exception hierarchy.
 * Feature-rich Object Mapping integrated with Spring's Conversion Service.
 * Annotation-based mapping metadata that is extensible to support other metadata formats.
@@ -669,9 +669,9 @@ public class StringToObjectId {
 [[mongo-template.type-mapping]]
 === Type Mapping
 
-MongoDB collections can contain documents that represent instances of a variety of types. This feature can be useful if you store a hierarchy of classes or have a class with a property of type `Object`. In the latter case, the values held inside that property have to be read in correctly when retrieving the object. Thus, we need a mechanism to store type information alongside the actual document.
+MongoDB collections can contain documents that represent instances of a variety of types.This feature can be useful if you store a hierarchy of classes or have a class with a property of type `Object`.In the latter case, the values held inside that property have to be read in correctly when retrieving the object.Thus, we need a mechanism to store type information alongside the actual document.
 
-To achieve that, the `MappingMongoConverter` uses a `MongoTypeMapper` abstraction with `DefaultMongoTypeMapper` as its main implementation. Its default behavior to store the fully qualified classname under `_class` inside the document. Type hints are written for top-level documents as well as for every value (if it is a complex type and a subtype of the declared property type). The following example (with a JSON representation at the end) shows how the mapping works:
+To achieve that, the `MappingMongoConverter` uses a `MongoTypeMapper` abstraction with `DefaultMongoTypeMapper` as its main implementation.Its default behavior to store the fully qualified classname under `_class` inside the document.Type hints are written for top-level documents as well as for every value (if it is a complex type and a subtype of the declared property type).The following example (with a JSON representation at the end) shows how the mapping works:
 
 .Type mapping
 ====
@@ -697,11 +697,11 @@ mongoTemplate.save(sample);
 ----
 ====
 
-Spring Data MongoDB stores the type information as the last field for the actual root class as well as for the nested type (because it is complex and a subtype of `Contact`). So, if you now use `mongoTemplate.findAll(Object.class, "sample")`, you can find out that the document stored is a `Sample` instance. You can also find out that the value property is actually a `Person`.
+Spring Data MongoDB stores the type information as the last field for the actual root class as well as for the nested type (because it is complex and a subtype of `Contact`).So, if you now use `mongoTemplate.findAll(Object.class, "sample")`, you can find out that the document stored is a `Sample` instance.You can also find out that the value property is actually a `Person`.
 
 ==== Customizing Type Mapping
 
-If you want to avoid writing the entire Java class name as type information but would rather like to use a key, you can use the `@TypeAlias` annotation on the entity class. If you need to customize the mapping even more, have a look at the `TypeInformationMapper` interface. An instance of that interface can be configured at the `DefaultMongoTypeMapper`, which can, in turn, be configured on `MappingMongoConverter`. The following example shows how to define a type alias for an entity:
+If you want to avoid writing the entire Java class name as type information but would rather like to use a key, you can use the `@TypeAlias` annotation on the entity class.If you need to customize the mapping even more, have a look at the `TypeInformationMapper` interface.An instance of that interface can be configured at the `DefaultMongoTypeMapper`, which can, in turn, be configured on `MappingMongoConverter`.The following example shows how to define a type alias for an entity:
 
 .Defining a type alias for an Entity
 ====
@@ -718,7 +718,9 @@ Note that the resulting document contains `pers` as the value in the `_class` Fi
 
 [WARNING]
 ====
-Type aliases only work if the mapping context is aware of the actual type. The required entity metadata is aquired either on first save or has to be provided via the configurations initial entity set. By default the configuration base package is scanned for potential candidates.
+Type aliases only work if the mapping context is aware of the actual type.
+The required entity metadata is determined either on first save or has to be provided via the configurations initial entity set.
+By default, the configuration class scans the base package for potential candidates.
 
 [source,java]
 ----
@@ -968,14 +970,14 @@ Person oldValue = template.update(Person.class)
   .apply(update)
   .findAndModifyValue(); // return's old person object
 
-assertThat(oldValue.getFirstName(), is("Harry"));
-assertThat(oldValue.getAge(), is(23));
+assertThat(oldValue.getFirstName()).isEqualTo("Harry");
+assertThat(oldValue.getAge()).isEqualTo(23);
 
 Person newValue = template.query(Person.class)
   .matching(query)
   .findOneValue();
 
-assertThat(newValue.getAge(), is(24));
+assertThat(newValue.getAge()).isEqualTo(24);
 
 Person newestValue = template.update(Person.class)
   .matching(query)
@@ -983,10 +985,10 @@ Person newestValue = template.update(Person.class)
   .withOptions(FindAndModifyOptions.options().returnNew(true)) // Now return the newly updated document when updating
   .findAndModifyValue();
 
-assertThat(newestValue.getAge(), is(25));
+assertThat(newestValue.getAge()).isEqualTo(25);
 ----
 
-The `FindAndModifyOptions` method lets you set the options of `returnNew`, `upsert`, and `remove`. An example extending from the previous code snippet follows:
+The `FindAndModifyOptions` method lets you set the options of `returnNew`, `upsert`, and `remove`.An example extending from the previous code snippet follows:
 
 [source,java]
 ----
@@ -996,8 +998,8 @@ Person upserted = template.update(Person.class)
   .withOptions(FindAndModifyOptions.options().upsert(true).returnNew(true))
   .findAndModifyValue()
 
-assertThat(upserted.getFirstName(), is("Mary"));
-assertThat(upserted.getAge(), is(1));
+assertThat(upserted.getFirstName()).isEqualTo("Mary");
+assertThat(upserted.getAge()).isOne();
 ----
 
 [[mongo-template.aggregation-update]]
@@ -1153,7 +1155,7 @@ An `OptimisticLockingFailureException` is raised if a versioned entity cannot be
 [[mongo.query]]
 == Querying Documents
 
-You can use the `Query` and `Criteria` classes to express your queries. They have method names that mirror the native MongoDB operator names, such as `lt`, `lte`, `is`, and others. The `Query` and `Criteria` classes follow a fluent API style so that you can chain together multiple method criteria and queries while having easy-to-understand code. To improve readability, static imports let you avoid using the 'new' keyword for creating `Query` and `Criteria` instances. You can also use `BasicQuery` to create `Query` instances from plain JSON Strings, as shown in the following example:
+You can use the `Query` and `Criteria` classes to express your queries.They have method names that mirror the native MongoDB operator names, such as `lt`, `lte`, `is`, and others.The `Query` and `Criteria` classes follow a fluent API style so that you can chain together multiple method criteria and queries while having easy-to-understand code.To improve readability, static imports let you avoid using the 'new' keyword for creating `Query` and `Criteria` instances.You can also use `BasicQuery` to create `Query` instances from plain JSON Strings, as shown in the following example:
 
 .Creating a Query instance from a plain JSON String
 ====
@@ -2183,7 +2185,7 @@ mongoOperations.find<Book>(
 [[mongo.query.additional-query-options]]
 === Additional Query Options
 
-MongoDB offers various ways of applying meta information, like a comment or a batch size, to a query. Using the `Query` API
+MongoDB offers various ways of applying meta information, like a comment or a batch size, to a query.Using the `Query` API
 directly there are several methods for those options.
 
 ====
@@ -2213,11 +2215,11 @@ include::query-by-example.adoc[leveloffset=+1]
 [[mongo.query.count]]
 == Counting Documents
 
-In pre 3.x versions of SpringData MongoDB the count operation was executed against MongoDBs internal collection statistics.
-With the introduction of <<mongo.transactions>> this was no longer possible because statistics would not correctly reflect potential changes during a transaction requiring an aggregation based count approach.
-So in 2.x `MongoOperations.count()` would use the collection statistics if no transaction was in progress, and the aggregation variant if so.
+In pre-3.x versions of SpringData MongoDB the count operation used MongoDBs internal collection statistics.
+With the introduction of <<mongo.transactions>> this was no longer possible because statistics would not correctly reflect potential changes during a transaction requiring an aggregation-based count approach.
+So in version 2.x `MongoOperations.count()` would use the collection statistics if no transaction was in progress, and the aggregation variant if so.
 
-As off Spring Data MongoDB 3.x any `count` operation, may it be with our without a filter query, uses the aggregation based count approach via MongoDBs `countDocuments`.
+As of Spring Data MongoDB 3.x any `count` operation uses regardless the existence of filter criteria the aggregation-based count approach via MongoDBs `countDocuments`.
 
 [NOTE]
 ====
@@ -2236,7 +2238,7 @@ Therefore a given `Query` will be rewritten for `count` operations using `Reacti
 <1> Count source query using `$near`.
 <2> Rewritten query now using `$geoWithin` with `$center`.
 <3> Count source query using `$near` with `$minDistance` and `$maxDistance`.
-<4> Rewritten query now a combination of `$nor` `$geowithin` critierias to work aournd unsupported `$minDistance`.
+<4> Rewritten query now a combination of `$nor` `$geowithin` critierias to work around unsupported `$minDistance`.
 ====
 
 [[mongo.mapreduce]]
@@ -2244,12 +2246,12 @@ Therefore a given `Query` will be rewritten for `count` operations using `Reacti
 
 You can query MongoDB by using Map-Reduce, which is useful for batch processing, for data aggregation, and for when the query language does not fulfill your needs.
 
-Spring provides integration with MongoDB's Map-Reduce by providing methods on `MongoOperations` to simplify the creation and execution of Map-Reduce operations. It can convert the results of a Map-Reduce operation to a POJO and integrates with Spring's https://docs.spring.io/spring/docs/{springVersion}/spring-framework-reference/core.html#resources[Resource abstraction]. This lets you place your JavaScript files on the file system, classpath, HTTP server, or any other Spring Resource implementation and then reference the JavaScript resources through an easy URI style syntax -- for example, `classpath:reduce.js;`. Externalizing JavaScript code in files is often preferable to embedding them as Java strings in your code. Note that you can still pass JavaScript code as Java strings if you prefer.
+Spring provides integration with MongoDB's Map-Reduce by providing methods on `MongoOperations` to simplify the creation and execution of Map-Reduce operations.It can convert the results of a Map-Reduce operation to a POJO and integrates with Spring's https://docs.spring.io/spring/docs/{springVersion}/spring-framework-reference/core.html#resources[Resource abstraction].This lets you place your JavaScript files on the file system, classpath, HTTP server, or any other Spring Resource implementation and then reference the JavaScript resources through an easy URI style syntax -- for example, `classpath:reduce.js;`.Externalizing JavaScript code in files is often preferable to embedding them as Java strings in your code.Note that you can still pass JavaScript code as Java strings if you prefer.
 
 [[mongo.mapreduce.example]]
 === Example Usage
 
-To understand how to perform Map-Reduce operations, we use an example from the book, _MongoDB - The Definitive Guide_ footnote:[Kristina Chodorow. _MongoDB - The Definitive Guide_. O'Reilly Media, 2013]. In this example, we create three documents that have the values [a,b], [b,c], and [c,d], respectively. The values in each document are associated with the key, 'x', as the following example shows (assume these documents are in a collection named `jmr1`):
+To understand how to perform Map-Reduce operations, we use an example from the book, _MongoDB - The Definitive Guide_ footnote:[Kristina Chodorow. _MongoDB - The Definitive Guide_. O'Reilly Media, 2013].In this example, we create three documents that have the values [a,b], [b,c], and [c,d], respectively.The values in each document are associated with the key, 'x', as the following example shows (assume these documents are in a collection named `jmr1`):
 
 [source]
 ----
@@ -2311,7 +2313,7 @@ ValueObject [id=c, value=2.0]
 ValueObject [id=d, value=1.0]
 ----
 
-The `MapReduceResults` class implements `Iterable` and provides access to the raw output and timing and count statistics. The following listing shows the `ValueObject` class:
+The `MapReduceResults` class implements `Iterable` and provides access to the raw output and timing and count statistics.The following listing shows the `ValueObject` class:
 
 [source,java]
 ----
@@ -2339,7 +2341,7 @@ public class ValueObject {
 }
 ----
 
-By default, the output type of `INLINE` is used so that you need not specify an output collection. To specify additional Map-Reduce options, use an overloaded method that takes an additional `MapReduceOptions` argument. The class `MapReduceOptions` has a fluent API, so adding additional options can be done in a compact syntax. The following example sets the output collection to `jmr1_out` (note that setting only the output collection assumes a default output type of `REPLACE`):
+By default, the output type of `INLINE` is used so that you need not specify an output collection.To specify additional Map-Reduce options, use an overloaded method that takes an additional `MapReduceOptions` argument.The class `MapReduceOptions` has a fluent API, so adding additional options can be done in a compact syntax.The following example sets the output collection to `jmr1_out` (note that setting only the output collection assumes a default output type of `REPLACE`):
 
 [source,java]
 ----
@@ -2355,7 +2357,7 @@ MapReduceResults<ValueObject> results = mongoOperations.mapReduce("jmr1", "class
                                                                      options().outputCollection("jmr1_out"), ValueObject.class);
 ----
 
-You can also specify a query to reduce the set of data that is fed into the Map-Reduce operation. The following example removes the document that contains [a,b] from consideration for Map-Reduce operations:
+You can also specify a query to reduce the set of data that is fed into the Map-Reduce operation.The following example removes the document that contains [a,b] from consideration for Map-Reduce operations:
 
 [source,java]
 ----
