--- a/src/main/asciidoc/reference/mongodb.adoc
+++ b/src/main/asciidoc/reference/mongodb.adoc
@@ -2074,10 +2074,11 @@ mongoOperations.find<Book>(
 )
 
 mongoOperations.find<Book>(
-  Criteria().andOperator(
-    Book::price gt 5,
-    Book::price lt 10
-  )
+  Query(
+    Criteria().andOperator(
+      Book::price gt 5,
+      Book::price lt 10
+    ))
 )
 
 // Binary operators
