--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,15 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 3.0.0.RELEASE (2020-05-12)
+---------------------------------------------
+* DATAMONGO-2541 - Upgrade to MongoDB 4.0.3 Drivers.
+* DATAMONGO-2535 - Remove Travis CI.
+* DATAMONGO-2534 - Release 3.0 GA (Neumann).
+* DATAMONGO-2509 - Polish documentation for 3.0 release.
+* DATAMONGO-365 - Example 5.5. of reference documentation uses deprecated function.
+
+
 Changes in version 3.0.0.RC2 (2020-04-28)
 -----------------------------------------
 * DATAMONGO-2531 - Fix MongoClientSettings UUID configuration hook in MongoConfigurationSupport.
@@ -3003,6 +3012,7 @@ Repository
 * Automatic implementation of interface query method names on repositories.
 * Namespace support for Mongo repositories
 * Allow usage of pagination and sorting with repositories
+
 
 
 
