--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,13 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 2.1.18.RELEASE (2020-06-10)
+----------------------------------------------
+* DATAMONGO-2547 - java.lang.IllegalArgumentException: com.mongodb.client.MongoDatabase referenced from a method is not visible from class loader.
+* DATAMONGO-2535 - Remove Travis CI.
+* DATAMONGO-2532 - Release 2.1.18 (Lovelace SR18).
+
+
 Changes in version 3.0.0.RELEASE (2020-05-12)
 ---------------------------------------------
 * DATAMONGO-2541 - Upgrade to MongoDB 4.0.3 Drivers.
