--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,17 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 2.2.8.RELEASE (2020-06-10)
+---------------------------------------------
+* DATAMONGO-2565 - MongoPersistentEntity.getCollation(...) evaluates document expression instead of collation expression.
+* DATAMONGO-2547 - java.lang.IllegalArgumentException: com.mongodb.client.MongoDatabase referenced from a method is not visible from class loader.
+* DATAMONGO-2545 - Backwards incompatibilities on @Query.
+* DATAMONGO-2542 - Don't attempt to map query operator keywords to properties.
+* DATAMONGO-2535 - Remove Travis CI.
+* DATAMONGO-2533 - Release 2.2.8 (Moore SR8).
+* DATAMONGO-2509 - Polish documentation for 3.0 release.
+
+
 Changes in version 2.1.18.RELEASE (2020-06-10)
 ----------------------------------------------
 * DATAMONGO-2547 - java.lang.IllegalArgumentException: com.mongodb.client.MongoDatabase referenced from a method is not visible from class loader.
@@ -3010,6 +3021,7 @@ Repository
 * Automatic implementation of interface query method names on repositories.
 * Namespace support for Mongo repositories
 * Allow usage of pagination and sorting with repositories
+
 
 
 
